--- a/app.json
+++ b/app.json
@@ -30,8 +30,9 @@
     "pages/course/component_t/detail/detail",
     "pages/course/component_t/detail/teacher_edit/teacher_edit",
     "pages/course/component_t/member/member-intro/member-intro",
-    "pages/course/component_t/homework/hw_create/hw_create"
-
+    "pages/course/component_t/homework/hw_create/hw_create",
+    "pages/course/component_t/homework/hw_show/hw_show",
+    "pages/course/component_t/homework/hw_edit/hw_edit"
   ],
   "window": {
     "backgroundTextStyle": "light",
